php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30799 SoapServer doesn't handle private or protected properties
Submitted: 2004-11-15 20:00 UTC Modified: 2004-11-16 14:07 UTC
From: david at giffin dot org Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.0.2 OS: Linux
Private report: No CVE-ID: None
 [2004-11-15 20:00 UTC] david at giffin dot org
Description:
------------
The SoapServer does not handle private or protected properties when sending a user defined class across the wire. The SOAP XML generated in the response is not well formed.

Reproduce code:
---------------
You can get the source code to replicate the problem at: http://www.giffin.org/soap.tgz

Expected result:
----------------
Return well formed XML using the name of the private or protected property as the XML element:

<?xml version="1.0" encoding="UTF-8"?>
<SOAP-ENV:Envelope xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/" xmlns:ns1="urn:SoapService" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" SOAP-ENV:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"><SOAP-ENV:Body><ns1:getSoapProblemResponse><return xsi:type="SOAP-ENC:Struct"><foo xsi:type="xsd:int">123</foo><bar xsi:type="xsd:int">234</bar></return></ns1:getSoapProblemResponse></SOAP-ENV:Body></SOAP-ENV:Envelope>

Actual result:
--------------
<?xml version="1.0" encoding="UTF-8"?>
<SOAP-ENV:Envelope xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/" xmlns:ns1="urn:SoapService" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" SOAP-ENV:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"><SOAP-ENV:Body><ns1:getSoapProblemResponse><return xsi:type="SOAP-ENC:Struct">< xsi:type="xsd:int">123</>< xsi:type="xsd:int">234</></return></ns1:getSoapProblemResponse></SOAP-ENV:Body></SOAP-ENV:Envelope>

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-11-16 14:07 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_0.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 14:00:02 2026 UTC