Fixed bug #30799 (SoapServer doesn't handle private or protected properties)